# langchain_langraph.app.local

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy-release.yml
app/: __init__.py  factory.py  graph.py  logging_config.py  main.py  settings.py
app/agents/: base.py  final_verifier.py  planner.py  prompts.py  synthesizer.py  verifier.py  worker.py
app/api/: __init__.py  dependencies.py  errors.py  exception_handlers.py  openapi.py  router.py  streaming.py
app/api/routes/: chat.py  health.py  inventory.py  metrics.py  root.py
app/core/: __init__.py  lifespan.py
app/graphs/: routes.py  state.py
app/llm/: errors.py  model_registry.py  ollama.py  resource_manager.py
app/mcp/: client.py  errors.py  protocol.py  result_parser.py  session.py  sse.py  transport.py
app/observability/: __init__.py  events.py  metrics.py  redaction.py  timing.py  tracing.py
app/orchestration/: __init__.py  chat_runtime.py  execution_meter.py  phase5_agent.py  run_context.py  run_identity.py
app/schemas/: chat.py  evidence.py  execution.py  finalization.py  planning.py  run.py  verification.py  worker.py
app/services/: answer_quality.py  claim_grounding.py  context_builder.py  decomposition.py  evidence.py  formatting.py  inventory.py  memory.py  query_rewriter.py  routing.py  termination.py
app/state/: __init__.py  base.py  in_memory.py  minio.py  neo4j.py  postgres.py  redis.py  run_repository.py  runtime.py
app/state/migrations/: 0001_run_repository.sql
app/tools/: executor.py  policies.py
docs/: CADDY.md  architecture.md  example_request.json
docs/example_request/: chat-complete.json  chat-stream.json  chat.json
docs/prompt/: langchain_langraph_10_stage_master_execution_prompt.md
scripts/: check_coverage_thresholds.py  create-success-backup.sh  deploy-local.sh  post-deploy-integration-test.sh  prepare-rollback.sh  rollback-release.sh  smoke-test.sh  verify-phase3.sh  verify-runtime.sh  verify-server.sh
tests/: conftest.py  test_api_routing.py  test_app.py  test_budget_termination.py  test_chat_identity_api.py  test_durable_run_identity.py  test_dynamic_routing.py  test_evidence_grounding.py  test_evidence_provenance.py  test_execution_budget_clock.py  test_execution_meter.py  test_final_verification.py  test_graph_checkpointing.py  test_history_idempotency.py  test_integration_quality_gate.py  test_inventory_endpoint.py  test_inventory_service.py  test_live_integration.py  test_mcp_client.py  test_memory_store.py  test_observability_metrics.py  test_ollama_client.py  test_openapi_example_boundary.py  test_openapi_request_examples.py  test_package_version.py  test_persistence_backends.py  test_persistence_connection_management.py  test_persistence_health.py  test_phase1_factory.py  test_phase1_runtime.py  test_phase2_graph.py  test_phase3.py  test_phase3_hotfix.py  test_phase3_settings_contract.py  test_phase4_state.py  test_phase5_api_identity.py  test_phase5_run_identity.py  test_physical_gateway_metering.py  test_planning_schema.py  test_postgres_run_repository.py  (+18 more)
