[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-langraph-app"
dynamic = ["version"]
description = "FastAPI + LangGraph app server with live Ollama/MCP inventory, dynamic routing, and a bounded worker-verifier workflow."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "integration: deterministic integration test that does not require LAN services",
  "live_integration: integration test requiring configured external services",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
# Start with correctness-critical lint rules so the gate protects deployments
# without requiring an unrelated whole-repository style rewrite.
select = ["E9", "F63", "F7", "F82"]
